Add resolution text and move download link

--- a/style.css
+++ b/style.css
@@ -26,13 +26,14 @@ body {
 }
 
 h1,
-canvas,
+#container,
 form {
   padding: 1rem;
 }
 
 #container {
   max-width: 100%;
+  text-align: center;
 }
 
 form {
